<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.PlayActivity">

    <TextView
        android:id="@+id/tvNumIntentos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="8dp"
        android:text="@string/tvIntentalo"
        app:layout_constraintEnd_toStartOf="@+id/edNumeroIntentado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edNumeroIntentado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:hint="@string/num"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvNumIntentos"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/tvNumIntentos" />

    <Button
        android:id="@+id/btComprobar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/btComprobar"
        android:onClick="onClickButtonPlay"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMayor" />

    <Button
        android:id="@+id/btBorrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:onClick="onClickButtonPlay"
        android:text="@string/btBorrar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.736"
        app:layout_constraintStart_toEndOf="@+id/btComprobar"
        app:layout_constraintTop_toBottomOf="@+id/tvMenor" />

    <TextView
        android:id="@+id/tvMayor"
        android:layout_width="113dp"
        android:layout_height="32dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="72dp"
        android:text="@string/tvMayor"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNumIntentos" />

    <TextView
        android:id="@+id/tvMenor"
        android:layout_width="113dp"
        android:layout_height="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/tvMenor"
        android:visibility="invisible"
        app:layout_constraintBaseline_toBaselineOf="@+id/tvMayor"
        app:layout_constraintEnd_toEndOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>